--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.11",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
