--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lightgallery": "^2.7.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "next": "14.2.11",
@@ -24,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-photo-album": "^3.0.2",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
