--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "next": "14.2.11",
@@ -28,6 +29,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
