--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.11",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
