--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "lightgallery": "^2.7.2",
     "framer-motion": "^11.7.0",
+    "lightgallery": "^2.7.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "next": "14.2.11",
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-photo-album": "^3.0.2",
+    "react-tooltip": "^5.28.0",
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
