--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/chip": "^2.0.33",
     "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/tooltip": "^2.0.41",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,7 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.7.0",
+    "framer-motion": "^11.9.0",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
