--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
