--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/avatar": "^2.0.33",
     "@nextui-org/chip": "^2.0.33",
     "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/table": "^2.0.40",
     "@nextui-org/tooltip": "^2.0.41",
