--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/card": "^2.0.34",
     "@nextui-org/chip": "^2.0.33",
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/modal": "^2.0.41",
