--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.17.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
