--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sharp": "^0.33.5",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
+    "stripe": "^17.2.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
