--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-photo-album": "^3.0.2",
+    "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
