Added print invoice

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-modal": "^3.16.1",
     "react-photo-album": "^3.0.2",
     "react-to-pdf": "^1.0.1",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
