--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/chip": "^2.0.33",
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/pagination": "^2.0.36",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/table": "^2.0.40",
     "@nextui-org/tooltip": "^2.0.41",
