--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-photo-album": "^3.0.2",
