--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@nextui-org/avatar": "^2.0.33",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/chip": "^2.0.33",
@@ -53,6 +54,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-modal": "^3.16.1",
     "react-photo-album": "^3.0.2",
     "react-to-pdf": "^1.0.1",
